refactor: replace /profile endpoint with users/me
