# docs/openapi.yaml
@@ -162,7 +162,7 @@ paths:
   /users:
     get:
       tags:
-        - "👤 Users"
+        - "👥 Users"
       summary: Get All Users
       description: Retrieve a list of all users. (Requires authentication)
       security:
@@ -198,7 +198,7 @@ paths:
           type: integer
     get:
       tags:
-        - "👤 Users"
+        - "👥 Users"
       summary: Get User by ID
       description: Retrieve a user by their ID. (Requires authentication)
       security:
@@ -224,7 +224,7 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     put:
       tags:
-        - "👤 Users"
+        - "👥 Users"
       summary: Update User
       description: Update an existing user. (Requires authentication)
       security:
@@ -261,7 +261,7 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
     delete:
       tags:
-        - "👤 Users"
+        - "👥 Users"
       summary: Delete User
       description: Delete a user by their ID. (Requires authentication)
       security:
@@ -285,6 +285,106 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
         "404":
           description: Not Found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /users/me:
+    get:
+      tags:
+        - "🙋 Profile"
+      summary: Get Profile
+      description: Retrieve the profile of the currently authenticated user.
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Profile retrieved successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "400":
+          description: Bad Request.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "401":
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    put:
+      tags:
+        - "🙋 Profile"
+      summary: Update Profile
+      description: Update the profile of the currently authenticated user.
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Updated profile payload.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateUser"
+      responses:
+        "200":
+          description: Profile updated successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "profile updated successfully"
+        "400":
+          description: Bad Request.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "401":
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal Server Error.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    delete:
+      tags:
+        - "🙋 Profile"
+      summary: Delete Profile
+      description: Delete the profile of the currently authenticated user.
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Profile deleted successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "profile deleted successfully"
+        "400":
+          description: Bad Request.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "401":
+          description: Unauthorized.
           content:
             application/json:
               schema:
@@ -413,106 +513,6 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
         "401":
           description: Unauthorized - Invalid or expired refresh token.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-  /profile:
-    get:
-      tags:
-        - "📝 Profile"
-      summary: Get Profile
-      description: Retrieve the profile of the currently authenticated user.
-      security:
-        - bearerAuth: []
-      responses:
-        "200":
-          description: Profile retrieved successfully.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-        "400":
-          description: Bad Request.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-        "401":
-          description: Unauthorized.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-    put:
-      tags:
-        - "📝 Profile"
-      summary: Update Profile
-      description: Update the profile of the currently authenticated user.
-      security:
-        - bearerAuth: []
-      requestBody:
-        description: Updated profile payload.
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UpdateUser"
-      responses:
-        "200":
-          description: Profile updated successfully.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "profile updated successfully"
-        "400":
-          description: Bad Request.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-        "401":
-          description: Unauthorized.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-        "500":
-          description: Internal Server Error.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-    delete:
-      tags:
-        - "📝 Profile"
-      summary: Delete Profile
-      description: Delete the profile of the currently authenticated user.
-      security:
-        - bearerAuth: []
-      responses:
-        "200":
-          description: Profile deleted successfully.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "profile deleted successfully"
-        "400":
-          description: Bad Request.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-        "401":
-          description: Unauthorized.
           content:
             application/json:
               schema:
@@ -750,147 +750,3 @@ components:
         - stock
     # User schemas
     User:
-      type: object
-      properties:
-        id:
-          type: integer
-          example: 1
-        first_name:
-          type: string
-          example: "Martin"
-          minLength: 2
-          maxLength: 30
-        last_name:
-          type: string
-          example: "Kalts"
-          minLength: 2
-          maxLength: 30
-        email:
-          type: string
-          example: "martin@gmail.com"
-        password:
-          type: string
-          example: "$2a$10$EKq8Yv9Y1WnrDFEdiMYCSOaz/..."
-          minLength: 8
-        phone_number:
-          type: string
-          pattern: "^\\+7[0-9]{10}$"
-          example: "+77007473472"
-        role:
-          type: string
-          enum:
-            - admin
-            - user
-          example: "user"
-        created_at:
-          type: string
-          format: date-time
-          example: "2025-02-25T12:37:32Z"
-        updated_at:
-          type: string
-          format: date-time
-          example: "2025-02-25T12:37:32Z"
-      required:
-        - first_name
-        - last_name
-        - email
-        - password
-        - phone_number
-        - role
-    RegisterUser:
-      type: object
-      properties:
-        first_name:
-          type: string
-          example: "Martin"
-          minLength: 2
-          maxLength: 30
-        last_name:
-          type: string
-          example: "Kalts"
-          minLength: 2
-          maxLength: 30
-        email:
-          type: string
-          example: "martin@gmail.com"
-        password:
-          type: string
-          example: "12341234"
-          minLength: 8
-        confirm_password:
-          type: string
-          example: "12341234"
-          minLength: 8
-        phone_number:
-          type: string
-          pattern: "^\\+7[0-9]{10}$"
-          example: "+77007473472"
-      required:
-        - first_name
-        - last_name
-        - email
-        - password
-        - confirm_password
-        - phone_number
-    LoginUser:
-      type: object
-      properties:
-        email:
-          type: string
-          example: "martin@gmail.com"
-        password:
-          type: string
-          example: "12341234"
-          minLength: 8
-      required:
-        - email
-        - password
-    UpdateUser:
-      type: object
-      properties:
-        first_name:
-          type: string
-          example: "Martin"
-          minLength: 2
-          maxLength: 30
-        last_name:
-          type: string
-          example: "Kalts"
-          minLength: 2
-          maxLength: 30
-        email:
-          type: string
-          example: "martin.programmer@gmail.com"
-        password:
-          type: string
-          example: "newSecret123"
-          minLength: 8
-        confirm_password:
-          type: string
-          example: "newSecret123"
-          minLength: 8
-        phone_number:
-          type: string
-          pattern: "^\\+7[0-9]{10}$"
-          example: "+77007473472"
-      description: All fields are optional. If updating password, both password and confirm_password must be provided and match.
-    TokenResponse:
-      type: object
-      properties:
-        access_token:
-          type: string
-          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-        refresh_token:
-          type: string
-          example: "dGhpcyBpcyBhIHJlZnJlc2ggdG9rZW4..."
-      required:
-        - access_token
-        - refresh_token
-    UpdateItem:
-      type: object
-      properties:
-        quantity:
-          type: integer
-          example: 2
-      required:
-        - quantity
